--- a/Backend/index.html
+++ b/Backend/index.html
@@ -21,14 +21,14 @@
 
     <script>
         let token = '';
-        const socket = io('http://43.204.234.64:3001');
+        const socket = io('https://fleet-track-dynamics-atlan.onrender.com');
         const bookingId = '670d6ad9a607f1c283889d5c'; // Use the booking ID from your test
 
         document.getElementById('login').addEventListener('click', async () => {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             try {
-                const response = await fetch('http://43.204.234.64:3001/api/v2/auth/login', {
+                const response = await fetch('https://fleet-track-dynamics-atlan.onrender.com/api/v2/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -75,7 +75,7 @@
             }
             const location = { lat: Math.random() * 90, lng: Math.random() * 180 };
             try {
-                const response = await fetch(`http://43.204.234.64:3001/api/v2/bookings/${bookingId}/location`, {
+                const response = await fetch(`https://fleet-track-dynamics-atlan.onrender.com/api/v2/bookings/${bookingId}/location`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -97,7 +97,7 @@
                 return;
             }
             try {
-                const response = await fetch(`http://43.204.234.64:3001/api/v2/bookings/${bookingId}/location`, {
+                const response = await fetch(`https://fleet-track-dynamics-atlan.onrender.com/api/v2/bookings/${bookingId}/location`, {
                     headers: {
                         'Authorization': `Bearer ${token}`
                     }
