Updated deployed backend

--- a/Backend/index.html
+++ b/Backend/index.html
@@ -21,7 +21,7 @@
 
     <script>
         let token = '';
-        const socket = io('https://dhavalrupapara.me');
+        const socket = io('https://fleet-track-dynamics-atlan-production.up.railway.app');
         const bookingId = '670d6ad9a607f1c283889d5c'; // Use the booking ID from your test
 
         document.getElementById('login').addEventListener('click', async () => {
